# TimeSwitch

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
.claude/: settings.json
main/: CMakeLists.txt  Kconfig.projbuild  hardware.h  idf_component.yml  main.c
main/calibration/: touch_cal.c  touch_cal.h
main/lcd/: lcd.c
main/ota/: ota_server.c  ota_server.h
main/relay/: relay.c  relay.h
main/settings/: settings.c  settings.h
main/time/: time_sync.c  time_sync.h
main/touch/: touch.c  touch.h
main/ui/: ui_main.c  ui_main.h  ui_relay.c  ui_relay.h  ui_schedule.c  ui_schedule.h
main/wifi/: captive_portal.c  captive_portal.h  wifi_manager.c  wifi_manager.h
