idf_component_register(
    SRCS
        "main.c"
        "relay/relay.c"
        "settings/settings.c"
        "wifi/wifi_manager.c"
        "wifi/captive_portal.c"
        "time/time_sync.c"
        "ota/ota_server.c"
    INCLUDE_DIRS
        "."
        "relay"
        "settings"
        "wifi"
        "time"
        "ota"
    REQUIRES
        cjson
        esp_timer
        driver
        nvs_flash
        esp_wifi
        esp_event
        esp_netif
        esp_http_server
        app_update
        lwip
)
